syntax = "proto3";

package product;

service ProductService {
  rpc GetProduct(ProductRequest) returns (ProductResponse);
  rpc GetAllProducts(Empty) returns (ProductsResponse);
}

message Empty {}

message ProductRequest {
  int32 productId = 1;
}

message ProductResponse {
  int32 id = 1;
  string name = 2;
  double price = 3;
}

message ProductsResponse {
  repeated ProductResponse products = 1;
}
